--- a/app/src/main/res/layout/activity_pictorial_book.xml
+++ b/app/src/main/res/layout/activity_pictorial_book.xml
@@ -17,17 +17,25 @@
             android:id="@+id/imageToLabel"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
         <Button
             android:id="@+id/btnTest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Label Image"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:text="@string/label_image" />
+        <Button
+            android:id="@+id/btnPickImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_pickimage"  />
+
         <TextView
             android:id="@+id/txtOutput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:gravity="start|top" />
+            android:gravity="start|top"
+            android:text="@string/text_insert" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
